fix: admin rendering UI + dark mode

--- a/server/modules/rendering/html-blockquotes/definition.yml
+++ b/server/modules/rendering/html-blockquotes/definition.yml
@@ -2,7 +2,7 @@ key: htmlBlockquotes
 title: Blockquotes
 description: Parse blockquotes box styling
 author: requarks.io
-icon: insert_comment
+icon: mdi-alpha-t-box-outline
 enabledDefault: true
 dependsOn: htmlCore
 props: {}
