--- a/server/modules/rendering/html-codehighlighter/definition.yml
+++ b/server/modules/rendering/html-codehighlighter/definition.yml
@@ -2,7 +2,7 @@ key: htmlCodehighlighter
 title: Code Highlighting Post-Processor
 description: Syntax detector for programming code
 author: requarks.io
-icon: palette
+icon: mdi-code-braces
 enabledDefault: true
 dependsOn: htmlCore
 props: {}
