--- a/server/modules/rendering/html-plantuml/definition.yml
+++ b/server/modules/rendering/html-plantuml/definition.yml
@@ -2,7 +2,7 @@ key: htmlPlantuml
 title: PlantUML
 description: Generate diagrams from PlantUML syntax
 author: requarks.io
-icon: multiline_chart
+icon: mdi-sitemap
 enabledDefault: false
 dependsOn: htmlCore
 props: {}
