--- a/server/modules/rendering/html-security/definition.yml
+++ b/server/modules/rendering/html-security/definition.yml
@@ -2,7 +2,7 @@ key: htmlSecurity
 title: Security
 description: Filter and strips potentially dangerous content
 author: requarks.io
-icon: whatshot
+icon: mdi-fire
 enabledDefault: true
 dependsOn: htmlCore
 props:
