--- a/server/modules/rendering/html-twemoji/definition.yml
+++ b/server/modules/rendering/html-twemoji/definition.yml
@@ -2,7 +2,7 @@ key: htmlTwemoji
 title: Twemoji
 description: Apply Twitter Emojis to all Unicode emojis
 author: requarks.io
-icon: whatshot
+icon: mdi-emoticon-happy-outline
 enabledDefault: true
 dependsOn: htmlCore
 props: {}
