--- a/server/modules/rendering/markdown-abbr/definition.yml
+++ b/server/modules/rendering/markdown-abbr/definition.yml
@@ -2,7 +2,7 @@ key: markdownAbbr
 title: Abbreviations
 description: Parse abbreviations into abbr tags
 author: requarks.io
-icon: text_format
+icon: mdi-contain-start
 enabledDefault: true
 dependsOn: markdownCore
 props: {}
