--- a/server/modules/rendering/markdown-core/definition.yml
+++ b/server/modules/rendering/markdown-core/definition.yml
@@ -4,7 +4,7 @@ description: Basic Markdown Parser
 author: requarks.io
 input: markdown
 output: html
-icon: crop_free
+icon: mdi-markdown
 props:
   allowHTML:
     type: Boolean
