--- a/server/modules/rendering/markdown-emoji/definition.yml
+++ b/server/modules/rendering/markdown-emoji/definition.yml
@@ -2,7 +2,7 @@ key: markdownEmoji
 title: Emoji
 description: Convert tags to emojis
 author: requarks.io
-icon: tag_faces
+icon: mdi-sticker-emoji
 enabledDefault: true
 dependsOn: markdownCore
 props: {}
