--- a/server/modules/rendering/markdown-imsize/definition.yml
+++ b/server/modules/rendering/markdown-imsize/definition.yml
@@ -2,7 +2,7 @@ key: markdownImsize
 title: Image Size
 description: Adds dimensions attributes to images
 author: requarks.io
-icon: insert_photo
+icon: mdi-image-size-select-large
 enabledDefault: true
 dependsOn: markdownCore
 props: {}
