--- a/server/modules/rendering/markdown-tasklists/definition.yml
+++ b/server/modules/rendering/markdown-tasklists/definition.yml
@@ -2,7 +2,7 @@ key: markdownTasklists
 title: Task Lists
 description: Parse task lists to checkboxes
 author: requarks.io
-icon: list
+icon: mdi-format-list-checks
 enabledDefault: true
 dependsOn: markdownCore
 props: {}
