--- a/server/modules/rendering/html-asciinema/definition.yml
+++ b/server/modules/rendering/html-asciinema/definition.yml
@@ -2,7 +2,7 @@ key: htmlAsciinema
 title: Asciinema
 description: Embed asciinema players from compatible links
 author: requarks.io
-icon: subtitles
+icon: mdi-theater
 enabledDefault: false
 dependsOn: htmlCore
 props: {}
