--- a/server/modules/rendering/html-mediaplayers/definition.yml
+++ b/server/modules/rendering/html-mediaplayers/definition.yml
@@ -2,7 +2,7 @@ key: htmlMediaplayers
 title: Media Players
 description: Embed players such as Youtube, Vimeo, Soundcloud, etc.
 author: requarks.io
-icon: subscriptions
+icon: mdi-library-video
 enabledDefault: true
 dependsOn: htmlCore
 props: {}
