--- a/server/modules/rendering/html-mermaid/definition.yml
+++ b/server/modules/rendering/html-mermaid/definition.yml
@@ -2,7 +2,7 @@ key: htmlMermaid
 title: Mermaid
 description: Generate flowcharts from Mermaid syntax
 author: requarks.io
-icon: merge_type
+icon: mdi-arrow-decision-outline
 enabledDefault: false
 dependsOn: htmlCore
 props: {}
