--- a/server/modules/rendering/markdown-expandtabs/definition.yml
+++ b/server/modules/rendering/markdown-expandtabs/definition.yml
@@ -2,7 +2,7 @@ key: markdownExpandtabs
 title: Expand Tabs
 description: Replace tabs with spaces in code blocks
 author: requarks.io
-icon: space_bar
+icon: mdi-arrow-expand-horizontal
 enabledDefault: true
 dependsOn: markdownCore
 props:
