--- a/server/modules/rendering/markdown-footnotes/definition.yml
+++ b/server/modules/rendering/markdown-footnotes/definition.yml
@@ -2,7 +2,7 @@ key: markdownFootnotes
 title: Footnotes
 description: Parse footnotes references
 author: requarks.io
-icon: low_priority
+icon: mdi-page-layout-footer
 enabledDefault: true
 dependsOn: markdownCore
 props: {}
