feat: mandatory password change on login + UI fixes

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -42,6 +42,13 @@ defaults:
       theme: 'default'
       iconset: 'md'
       darkMode: false
+    security:
+      securityIframe: true
+      securityReferrerPolicy: true
+      securityHSTS: false
+      securityHSTSDuration: 300
+      securityCSP: false
+      securityCSPDirectives: ''
     flags:
       ldapdebug: false
       sqllog: false
