fix: login dialog dark mode

--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,9 @@ npm-debug.log*
 
 # Generated assets
 /assets
-/server/views/master.pug
-/server/views/legacy/master.pug
-/server/views/setup.pug
+server/views/master.pug
+server/views/legacy/master.pug
+server/views/setup.pug
 
 # Webpack
 .webpack-cache
