--- a/server/modules/authentication/keycloak/definition.yml
+++ b/server/modules/authentication/keycloak/definition.yml
@@ -2,7 +2,7 @@ key: keycloak
 title: Keycloak
 description: Keycloak is an open source software product to allow single sign-on with Identity Management and Access Management aimed at modern applications and services.
 author: D4uS1
-logo: https://static.requarks.io/logo/oidc.svg
+logo: https://static.requarks.io/logo/keycloak.svg
 color: blue-grey darken-2
 website: https://www.keycloak.org/
 useForm: false
