--- a/.babelrc
+++ b/.babelrc
@@ -31,7 +31,7 @@
       "@babel/preset-env", {
         "useBuiltIns": "entry",
         "corejs": 3,
-        "debug": true
+        "debug": false
       }
     ]
   ]
