--- a/package.json
+++ b/package.json
@@ -206,6 +206,7 @@
     "cache-loader": "4.1.0",
     "chart.js": "2.8.0",
     "clean-webpack-plugin": "3.0.0",
+    "codemirror": "5.48.4",
     "copy-webpack-plugin": "5.0.4",
     "core-js": "3.2.1",
     "css-loader": "3.2.0",
@@ -274,7 +275,6 @@
     "vue-apollo": "3.0.0-rc.2",
     "vue-chartjs": "3.4.2",
     "vue-clipboards": "1.3.0",
-    "vue-codemirror": "4.0.6",
     "vue-filepond": "5.1.3",
     "vue-hot-reload-api": "2.3.3",
     "vue-loader": "15.7.1",
