--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "@exlinc/keycloak-passport": "1.0.2",
     "algoliasearch": "3.34.0",
     "apollo-fetch": "0.7.0",
-    "apollo-server": "2.9.2",
-    "apollo-server-express": "2.9.2",
+    "apollo-server": "2.9.3",
+    "apollo-server-express": "2.9.3",
     "auto-load": "3.0.4",
-    "aws-sdk": "2.521.0",
+    "aws-sdk": "2.524.0",
     "axios": "0.19.0",
     "azure-search-client": "3.1.5",
     "bcryptjs-then": "1.0.1",
@@ -60,7 +60,7 @@
     "custom-error-instance": "2.1.1",
     "dependency-graph": "0.8.0",
     "diff": "4.0.1",
-    "diff2html": "2.11.2",
+    "diff2html": "2.11.3",
     "dotize": "0.3.0",
     "elasticsearch6": "npm:@elastic/elasticsearch@6",
     "elasticsearch7": "npm:@elastic/elasticsearch@7",
@@ -68,7 +68,7 @@
     "express": "4.17.1",
     "express-brute": "1.0.1",
     "express-session": "1.16.2",
-    "file-type": "12.2.0",
+    "file-type": "12.3.0",
     "filesize": "4.1.2",
     "fs-extra": "8.1.0",
     "getos": "3.1.1",
@@ -79,7 +79,7 @@
     "graphql-tools": "4.0.5",
     "highlight.js": "9.15.10",
     "i18next": "17.0.13",
-    "i18next-express-middleware": "1.8.1",
+    "i18next-express-middleware": "1.8.2",
     "i18next-node-fs-backend": "2.1.3",
     "image-size": "0.7.4",
     "js-base64": "2.5.1",
@@ -167,10 +167,10 @@
     "yargs": "14.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.0",
-    "@babel/core": "^7.5.4",
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
     "@babel/plugin-proposal-class-properties": "^7.5.0",
-    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.6.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
     "@babel/plugin-proposal-function-sent": "^7.5.0",
     "@babel/plugin-proposal-json-strings": "^7.2.0",
@@ -178,21 +178,22 @@
     "@babel/plugin-proposal-throw-expressions": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-import-meta": "^7.2.0",
-    "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.5.4",
-    "@mdi/font": "4.2.95",
+    "@babel/polyfill": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@mdi/font": "4.3.95",
     "@panter/vue-i18next": "0.15.1",
+    "@requarks/ckeditor5": "12.4.0-wiki.11",
     "@vue/babel-preset-app": "3.11.0",
     "animate-sass": "0.8.2",
     "animated-number-vue": "1.0.0",
     "apollo-cache-inmemory": "1.6.3",
     "apollo-client": "2.6.4",
-    "apollo-link": "1.2.12",
-    "apollo-link-batch-http": "1.2.12",
-    "apollo-link-error": "1.1.11",
-    "apollo-link-http": "1.5.15",
+    "apollo-link": "1.2.13",
+    "apollo-link-batch-http": "1.2.13",
+    "apollo-link-error": "1.1.12",
+    "apollo-link-http": "1.5.16",
     "apollo-link-persisted-queries": "0.2.2",
-    "apollo-link-ws": "1.0.18",
+    "apollo-link-ws": "1.0.19",
     "apollo-utilities": "1.3.2",
     "autoprefixer": "9.6.1",
     "babel-eslint": "10.0.3",
@@ -217,20 +218,20 @@
     "eslint-config-requarks": "1.0.7",
     "eslint-config-standard": "14.1.0",
     "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-node": "9.2.0",
+    "eslint-plugin-node": "10.0.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.1",
     "eslint-plugin-vue": "5.2.3",
     "fibers": "4.0.1",
     "file-loader": "4.2.0",
-    "filepond": "4.5.1",
+    "filepond": "4.6.1",
     "filepond-plugin-file-validate-type": "1.2.4",
     "filesize.js": "1.0.2",
-    "grapesjs": "0.15.3",
+    "grapesjs": "0.15.5",
     "graphiql": "0.14.2",
     "graphql-persisted-document-loader": "1.0.1",
     "graphql-tag": "^2.10.1",
-    "graphql-voyager": "1.0.0-rc.27",
+    "graphql-voyager": "1.0.0-rc.28",
     "hammerjs": "2.0.8",
     "html-webpack-plugin": "4.0.0-beta.8",
     "html-webpack-pug-plugin": "2.0.0",
@@ -265,7 +266,7 @@
     "script-ext-html-webpack-plugin": "2.1.4",
     "simple-progress-webpack-plugin": "1.1.2",
     "style-loader": "1.0.0",
-    "terser": "4.2.1",
+    "terser": "4.3.0",
     "twemoji-awesome": "1.0.6",
     "url-loader": "2.1.0",
     "vee-validate": "2.2.15",
@@ -287,19 +288,19 @@
     "vue-tour": "1.1.0",
     "vue2-animate": "2.1.2",
     "vuedraggable": "2.23.0",
-    "vuescroll": "4.14.0",
-    "vuetify": "2.0.11",
+    "vuescroll": "4.14.3",
+    "vuetify": "2.0.15",
     "vuetify-loader": "1.3.0",
     "vuex": "3.1.1",
-    "vuex-pathify": "1.2.4",
+    "vuex-pathify": "1.4.0",
     "vuex-persistedstate": "2.5.4",
     "webpack": "4.39.3",
     "webpack-bundle-analyzer": "3.4.1",
-    "webpack-cli": "3.3.7",
-    "webpack-dev-middleware": "3.7.0",
+    "webpack-cli": "3.3.8",
+    "webpack-dev-middleware": "3.7.1",
     "webpack-hot-middleware": "2.25.0",
     "webpack-merge": "4.2.2",
-    "webpack-subresource-integrity": "1.3.2",
+    "webpack-subresource-integrity": "1.3.3",
     "webpackbar": "4.0.0",
     "whatwg-fetch": "3.0.0",
     "write-file-webpack-plugin": "4.5.1",
