--- a/server/modules/storage/s3/definition.yml
+++ b/server/modules/storage/s3/definition.yml
@@ -1,11 +1,32 @@
 key: s3
 title: Amazon S3
 description: Amazon S3 is a cloud computing web service offered by Amazon Web Services which provides object storage.
-author: requarks.io
+author: andrewsim
 logo: https://static.requarks.io/logo/aws-s3.svg
 website: https://aws.amazon.com/s3/
+isAvailable: true
+supportedModes:
+  - push
+defaultMode: push
+schedule: false
 props:
-  accessKeyId: String
-  accessSecret: String
-  region: String
-  bucket: String
+  region:
+    type: String
+    title: Region
+    hint: The AWS datacenter region where the bucket will be created.
+    order: 1
+  bucket:
+    type: String
+    title: Unique bucket name
+    hint: The unique bucket name to create (e.g. wiki-johndoe).
+    order: 2
+  accessKeyId:
+    type: String
+    title: Access Key ID
+    hint: The Access Key.
+    order: 3
+  secretAccessKey:
+    type: String
+    title: Secret Access Key
+    hint: The Secret Access Key for the Access Key ID you created above.
+    order: 4
