fix: added plantuml module config order

--- a/server/modules/rendering/markdown-plantuml/definition.yml
+++ b/server/modules/rendering/markdown-plantuml/definition.yml
@@ -2,20 +2,28 @@ key: markdownPlantuml
 title: PlantUML
 description: PlantUML Markdown Parser
 author: ethanmdavidson
-icon: mdi-factory
+icon: mdi-sitemap
 enabledDefault: true
 dependsOn: markdownCore
 props:
+  server:
+    type: String
+    default: http://www.plantuml.com/plantuml
+    title: PlantUML Server
+    hint: PlantUML server used for image generation
+    order: 1
   openMarker:
     type: String
     default: "@startuml"
     title: Open Marker
     hint: String to use as opening delimiter
+    order: 2
   closeMarker:
     type: String
     default: "@enduml"
     title: Close Marker
     hint: String to use as closing delimiter
+    order: 3
   imageFormat:
     type: String
     default: svg
@@ -26,8 +34,4 @@ props:
       - png
       - latex
       - ascii
-  server:
-    type: String
-    default: http://www.plantuml.com/plantuml
-    title: PlantUML Server
-    hint: PlantUML server used for image generation
+    order: 4
