feat: import content + x-forwarded toggle

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -45,6 +45,7 @@ defaults:
     security:
       securityIframe: true
       securityReferrerPolicy: true
+      securityTrustProxy: true
       securityHSTS: false
       securityHSTSDuration: 300
       securityCSP: false
