--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,6 @@
 # These are supported funding model platforms
 
-github: NGPixel
+github: [NGPixel]
 patreon: requarks
 open_collective: wikijs
 ko_fi: # Replace with a single Ko-fi username
