feat: SRI security toggle

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -46,6 +46,7 @@ defaults:
       securityIframe: true
       securityReferrerPolicy: true
       securityTrustProxy: true
+      securitySRI: true
       securityHSTS: false
       securityHSTSDuration: 300
       securityCSP: false
