--- a/client/static/manifest.json
+++ b/client/static/manifest.json
@@ -1,46 +1,20 @@
 {
-  "background_color": "#fbfbfc",
-  "display": "standalone",
-  "icons": [
-    {
-      "src": "\/favicons\/android-icon-36x36.png",
-      "sizes": "36x36",
-      "type": "image\/png",
-      "density": "0.75"
-    },
-    {
-      "src": "\/favicons\/android-icon-48x48.png",
-      "sizes": "48x48",
-      "type": "image\/png",
-      "density": "1.0"
-    },
-    {
-      "src": "\/favicons\/android-icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image\/png",
-      "density": "1.5"
-    },
-    {
-      "src": "\/favicons\/android-icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image\/png",
-      "density": "2.0"
-    },
-    {
-      "src": "\/favicons\/android-icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image\/png",
-      "density": "3.0"
-    },
-    {
-      "src": "\/favicons\/android-icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image\/png",
-      "density": "4.0"
-    }
-  ],
-  "name": "Wiki",
-  "short_name": "Wiki",
+  "name": "Wiki.js",
+  "short_name": "Wiki.js",
   "start_url": "/",
-  "theme_color": "#0288d1"
+  "icons": [
+      {
+          "src": "/favicons/android-chrome-192x192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+      },
+      {
+          "src": "/favicons/android-chrome-256x256.png",
+          "sizes": "256x256",
+          "type": "image/png"
+      }
+  ],
+  "theme_color": "#1976d2",
+  "background_color": "#1976d2",
+  "display": "standalone"
 }
