refactor: use dataPath variable as given in file config (#1118)
* Actually use path variables as given in default config

* Drop paths.content, avoid populating the global WIKI object

--- a/config.sample.yml
+++ b/config.sample.yml
@@ -105,3 +105,9 @@ uploads:
 # download the offline files for sideloading.
 
 offline: false
+
+# ---------------------------------------------------------------------
+# Data Path
+# ---------------------------------------------------------------------
+# Writeable data path for Wiki.js, mainly for cache and user uploads.
+dataPath: ./data
