misc: update dependencies

--- a/package.json
+++ b/package.json
@@ -35,22 +35,22 @@
   },
   "dependencies": {
     "@aoberoi/passport-slack": "1.0.5",
-    "@bugsnag/js": "6.4.2",
+    "@bugsnag/js": "6.4.3",
     "@exlinc/keycloak-passport": "1.0.2",
     "algoliasearch": "3.35.1",
     "apollo-fetch": "0.7.0",
-    "apollo-server": "2.9.6",
-    "apollo-server-express": "2.9.6",
+    "apollo-server": "2.9.7",
+    "apollo-server-express": "2.9.7",
     "auto-load": "3.0.4",
-    "aws-sdk": "2.548.0",
+    "aws-sdk": "2.556.0",
     "azure-search-client": "3.1.5",
     "bcryptjs-then": "1.0.1",
-    "bluebird": "3.7.0",
+    "bluebird": "3.7.1",
     "body-parser": "1.19.0",
     "brute-knex": "4.0.0",
     "chalk": "2.4.2",
     "cheerio": "1.0.0-rc.3",
-    "chokidar": "3.2.1",
+    "chokidar": "3.2.2",
     "clean-css": "4.2.1",
     "compression": "1.7.4",
     "connect-session-knex": "1.4.0",
@@ -67,7 +67,7 @@
     "express": "4.17.1",
     "express-brute": "1.0.1",
     "express-session": "1.17.0",
-    "file-type": "12.3.0",
+    "file-type": "12.3.1",
     "filesize": "5.0.3",
     "fs-extra": "8.1.0",
     "getos": "3.1.1",
@@ -75,10 +75,10 @@
     "graphql-list-fields": "2.0.2",
     "graphql-rate-limit-directive": "1.2.0",
     "graphql-subscriptions": "1.1.0",
-    "graphql-tools": "4.0.5",
+    "graphql-tools": "4.0.6",
     "he": "1.2.0",
     "highlight.js": "9.15.10",
-    "i18next": "17.2.0",
+    "i18next": "18.0.1",
     "i18next-express-middleware": "1.8.2",
     "i18next-node-fs-backend": "2.1.3",
     "image-size": "0.8.3",
@@ -87,11 +87,11 @@
     "js-yaml": "3.13.1",
     "jsonwebtoken": "8.5.1",
     "klaw": "3.0.0",
-    "knex": "0.19.5",
+    "knex": "0.20.0",
     "lodash": "4.17.15",
     "markdown-it": "10.0.0",
     "markdown-it-abbr": "1.0.4",
-    "markdown-it-anchor": "5.2.4",
+    "markdown-it-anchor": "5.2.5",
     "markdown-it-attrs": "3.0.1",
     "markdown-it-emoji": "1.4.0",
     "markdown-it-expand-tabs": "1.0.13",
@@ -106,14 +106,14 @@
     "mathjax-node": "2.1.1",
     "mime-types": "2.1.24",
     "moment": "2.24.0",
-    "moment-timezone": "0.5.26",
-    "mongodb": "3.3.2",
+    "moment-timezone": "0.5.27",
+    "mongodb": "3.3.3",
     "mssql": "5.1.0",
     "multer": "1.4.2",
     "mysql2": "1.7.0",
-    "nanoid": "2.1.3",
+    "nanoid": "2.1.6",
     "node-2fa": "1.1.2",
-    "node-cache": "4.2.1",
+    "node-cache": "5.0.0",
     "nodemailer": "6.3.1",
     "objection": "1.6.11",
     "passport": "0.4.0",
@@ -146,7 +146,7 @@
     "remove-markdown": "0.3.0",
     "request": "2.88.0",
     "request-promise": "4.2.4",
-    "safe-regex": "2.0.2",
+    "safe-regex": "2.1.1",
     "sanitize-filename": "1.6.3",
     "scim-query-filter-parser": "2.0.1",
     "semver": "6.3.0",
@@ -181,7 +181,7 @@
     "@mdi/font": "4.5.95",
     "@panter/vue-i18next": "0.15.1",
     "@requarks/ckeditor5": "12.4.0-wiki.14",
-    "@vue/babel-preset-app": "3.12.0",
+    "@vue/babel-preset-app": "4.0.5",
     "animate-sass": "0.8.2",
     "animated-number-vue": "1.0.0",
     "apollo-cache-inmemory": "1.6.3",
@@ -193,7 +193,7 @@
     "apollo-link-persisted-queries": "0.2.2",
     "apollo-link-ws": "1.0.19",
     "apollo-utilities": "1.3.2",
-    "autoprefixer": "9.6.4",
+    "autoprefixer": "9.7.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "24.9.0",
     "babel-loader": "^8.0.6",
@@ -202,16 +202,16 @@
     "babel-plugin-prismjs": "1.1.1",
     "babel-plugin-transform-imports": "2.0.0",
     "cache-loader": "4.1.0",
-    "chart.js": "2.8.0",
+    "chart.js": "2.9.0",
     "clean-webpack-plugin": "3.0.0",
-    "codemirror": "5.49.0",
+    "codemirror": "5.49.2",
     "copy-webpack-plugin": "5.0.4",
-    "core-js": "3.2.1",
+    "core-js": "3.3.4",
     "css-loader": "3.2.0",
     "cssnano": "4.1.10",
     "duplicate-package-checker-webpack-plugin": "3.0.0",
     "epic-spinners": "1.1.0",
-    "eslint": "6.5.1",
+    "eslint": "6.6.0",
     "eslint-config-requarks": "1.0.7",
     "eslint-config-standard": "14.1.0",
     "eslint-plugin-import": "2.18.2",
@@ -219,12 +219,11 @@
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.1",
     "eslint-plugin-vue": "5.2.3",
-    "fibers": "4.0.1",
+    "fibers": "4.0.2",
     "file-loader": "4.2.0",
     "filepond": "4.7.2",
     "filepond-plugin-file-validate-type": "1.2.4",
     "filesize.js": "2.0.0",
-    "graphiql": "0.14.2",
     "graphql-persisted-document-loader": "1.0.1",
     "graphql-tag": "^2.10.1",
     "hammerjs": "2.0.8",
@@ -253,19 +252,19 @@
     "pug-plain-loader": "1.0.0",
     "raw-loader": "3.1.0",
     "resolve-url-loader": "3.1.0",
-    "sass": "1.23.0",
+    "sass": "1.23.1",
     "sass-loader": "8.0.0",
     "sass-resources-loader": "2.0.1",
     "script-ext-html-webpack-plugin": "2.1.4",
     "simple-progress-webpack-plugin": "1.1.2",
     "style-loader": "1.0.0",
-    "terser": "4.3.8",
+    "terser": "4.3.9",
     "twemoji-awesome": "1.0.6",
     "url-loader": "2.2.0",
     "velocity-animate": "1.5.2",
     "viz.js": "2.1.2",
     "vue": "2.6.10",
-    "vue-apollo": "3.0.0-rc.7",
+    "vue-apollo": "3.0.0",
     "vue-chartjs": "3.4.2",
     "vue-clipboards": "1.3.0",
     "vue-filepond": "5.1.3",
@@ -278,13 +277,13 @@
     "vue2-animate": "2.1.2",
     "vuedraggable": "2.23.2",
     "vuescroll": "4.14.4",
-    "vuetify": "2.1.3",
+    "vuetify": "2.1.7",
     "vuetify-loader": "1.3.0",
     "vuex": "3.1.1",
     "vuex-pathify": "1.4.0",
     "vuex-persistedstate": "2.5.4",
-    "webpack": "4.41.1",
-    "webpack-bundle-analyzer": "3.5.2",
+    "webpack": "4.41.2",
+    "webpack-bundle-analyzer": "3.6.0",
     "webpack-cli": "3.3.9",
     "webpack-dev-middleware": "3.7.2",
     "webpack-hot-middleware": "2.25.0",
@@ -293,7 +292,7 @@
     "webpackbar": "4.0.0",
     "whatwg-fetch": "3.0.0",
     "write-file-webpack-plugin": "4.5.1",
-    "xterm": "4.1.0",
+    "xterm": "4.2.0",
     "zxcvbn": "4.4.2"
   },
   "browserslist": [
