docs: update example docker-compose.yml
[skip ci]

--- a/dev/examples/docker-compose.yml
+++ b/dev/examples/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - db-data:/var/lib/postgresql/data
 
   wiki:
-    image: requarks/wiki:beta
+    image: requarks/wiki:2
     depends_on:
       - db
     environment:
