Fixed missing RUN cmd

--- a/dev/openshift/Dockerfile
+++ b/dev/openshift/Dockerfile
@@ -3,6 +3,7 @@ FROM requarks/wiki:2
 # For mounting config.yml as configmap, some directory operations should be done.
 
 WORKDIR /wiki
-    mkdir config && \
+
+RUN mkdir config && \
     mv config.yml config/config.yml && \
     ln -s config/config.yml config.yml
