--- a/dev/openshift/Dockerfile
+++ b/dev/openshift/Dockerfile
@@ -7,3 +7,7 @@ WORKDIR /wiki
 RUN mkdir config && \
     mv config.yml config/config.yml && \
     ln -s config/config.yml config.yml
+
+# For offline installation, create sideload directory,then
+# mount en.json and locales.json
+RUN mkdir -p data/sideload
