docs: update docker-compose example

--- a/dev/examples/docker-compose.yml
+++ b/dev/examples/docker-compose.yml
@@ -1,13 +1,15 @@
 version: "3"
 services:
+
   db:
-    image: postgres:9-alpine
+    image: postgres:11-alpine
     environment:
       POSTGRES_DB: wiki
       POSTGRES_PASSWORD: wikijsrocks
       POSTGRES_USER: wikijs
     logging:
       driver: "none"
+    restart: unless-stopped
     volumes:
       - db-data:/var/lib/postgresql/data
 
@@ -22,8 +24,9 @@ services:
       DB_USER: wikijs
       DB_PASS: wikijsrocks
       DB_NAME: wiki
+    restart: unless-stopped
     ports:
-      - "3000:3000" # <-- replace with "80:3000" to listen on port 80 instead
+      - "80:3000"
 
 volumes:
   db-data:
