feat: katex + admin SSL UI (wip) + dev warning

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "releaseDate": "2019-01-01T01:01:01.000Z",
   "description": "A modern, lightweight and powerful wiki app built on NodeJS, Git and Markdown",
   "main": "wiki.js",
+  "dev": true,
   "scripts": {
     "start": "node server",
     "dev": "node dev",
@@ -39,10 +40,10 @@
     "@exlinc/keycloak-passport": "1.0.2",
     "algoliasearch": "3.35.1",
     "apollo-fetch": "0.7.0",
-    "apollo-server": "2.9.12",
-    "apollo-server-express": "2.9.12",
+    "apollo-server": "2.9.13",
+    "apollo-server-express": "2.9.13",
     "auto-load": "3.0.4",
-    "aws-sdk": "2.580.0",
+    "aws-sdk": "2.590.0",
     "azure-search-client": "3.1.5",
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.7.2",
@@ -57,7 +58,7 @@
     "cookie-parser": "1.4.4",
     "cors": "2.8.5",
     "custom-error-instance": "2.1.1",
-    "dependency-graph": "0.8.0",
+    "dependency-graph": "0.8.1",
     "diff": "4.0.1",
     "diff2html": "2.12.1",
     "dotize": "0.3.0",
@@ -77,17 +78,18 @@
     "graphql-subscriptions": "1.1.0",
     "graphql-tools": "4.0.6",
     "he": "1.2.0",
-    "highlight.js": "9.16.2",
-    "i18next": "19.0.1",
-    "i18next-express-middleware": "1.8.2",
+    "highlight.js": "9.17.1",
+    "i18next": "19.0.2",
+    "i18next-express-middleware": "1.9.1",
     "i18next-node-fs-backend": "2.1.3",
     "image-size": "0.8.3",
     "js-base64": "2.5.1",
     "js-binary": "1.2.0",
     "js-yaml": "3.13.1",
     "jsonwebtoken": "8.5.1",
+    "katex": "0.11.1",
     "klaw": "3.0.0",
-    "knex": "0.20.3",
+    "knex": "0.20.4",
     "lodash": "4.17.15",
     "markdown-it": "10.0.0",
     "markdown-it-abbr": "1.0.4",
@@ -106,17 +108,17 @@
     "mime-types": "2.1.25",
     "moment": "2.24.0",
     "moment-timezone": "0.5.27",
-    "mongodb": "3.3.5",
+    "mongodb": "3.4.0",
     "mssql": "6.0.1",
     "multer": "1.4.2",
-    "mysql2": "2.0.1",
+    "mysql2": "2.0.2",
     "nanoid": "2.1.7",
     "node-2fa": "1.1.2",
-    "node-cache": "5.0.2",
-    "nodemailer": "6.3.1",
+    "node-cache": "5.1.0",
+    "nodemailer": "6.4.2",
     "objection": "1.6.11",
-    "passport": "0.4.0",
-    "passport-auth0": "1.3.0",
+    "passport": "0.4.1",
+    "passport-auth0": "1.3.1",
     "passport-azure-ad": "4.2.0",
     "passport-cas": "0.1.1",
     "passport-discord": "0.1.3",
@@ -150,9 +152,9 @@
     "scim-query-filter-parser": "2.0.2",
     "semver": "6.3.0",
     "serve-favicon": "2.5.0",
-    "simple-git": "1.126.0",
+    "simple-git": "1.129.0",
     "solr-node": "1.2.1",
-    "sqlite3": "4.1.0",
+    "sqlite3": "4.1.1",
     "striptags": "3.1.1",
     "subscriptions-transport-ws": "0.9.16",
     "tar-fs": "2.0.0",
@@ -165,8 +167,8 @@
     "yargs": "15.0.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.4",
-    "@babel/core": "^7.7.4",
+    "@babel/cli": "^7.7.5",
+    "@babel/core": "^7.7.5",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-decorators": "^7.7.4",
     "@babel/plugin-proposal-export-namespace-from": "^7.7.4",
@@ -177,22 +179,22 @@
     "@babel/plugin-syntax-dynamic-import": "^7.7.4",
     "@babel/plugin-syntax-import-meta": "^7.7.4",
     "@babel/polyfill": "^7.7.0",
-    "@babel/preset-env": "^7.7.4",
-    "@mdi/font": "4.6.95",
+    "@babel/preset-env": "^7.7.6",
+    "@mdi/font": "4.7.95",
     "@panter/vue-i18next": "0.15.1",
     "@requarks/ckeditor5": "12.4.0-wiki.14",
     "@vue/babel-preset-app": "4.1.1",
     "animate-sass": "0.8.2",
     "animated-number-vue": "1.0.0",
-    "apollo-cache-inmemory": "1.6.3",
-    "apollo-client": "2.6.4",
+    "apollo-cache-inmemory": "1.6.5",
+    "apollo-client": "2.6.8",
     "apollo-link": "1.2.13",
     "apollo-link-batch-http": "1.2.13",
     "apollo-link-error": "1.1.12",
     "apollo-link-http": "1.5.16",
     "apollo-link-persisted-queries": "0.2.2",
     "apollo-link-ws": "1.0.19",
-    "apollo-utilities": "1.3.2",
+    "apollo-utilities": "1.3.3",
     "autoprefixer": "9.7.3",
     "babel-eslint": "10.0.3",
     "babel-jest": "24.9.0",
@@ -206,26 +208,26 @@
     "clean-webpack-plugin": "3.0.0",
     "clipboard": "2.0.4",
     "codemirror": "5.49.2",
-    "copy-webpack-plugin": "5.0.5",
-    "core-js": "3.4.5",
-    "css-loader": "3.2.0",
+    "copy-webpack-plugin": "5.1.1",
+    "core-js": "3.5.0",
+    "css-loader": "3.3.2",
     "cssnano": "4.1.10",
     "duplicate-package-checker-webpack-plugin": "3.0.0",
     "epic-spinners": "1.1.0",
     "eslint": "6.7.2",
     "eslint-config-requarks": "1.0.7",
     "eslint-config-standard": "14.1.0",
-    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-import": "2.19.1",
     "eslint-plugin-node": "10.0.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.1",
     "eslint-plugin-vue": "6.0.1",
     "fibers": "4.0.2",
     "file-loader": "5.0.2",
-    "filepond": "4.7.4",
+    "filepond": "4.9.2",
     "filepond-plugin-file-validate-type": "1.2.4",
     "filesize.js": "2.0.0",
-    "graphql-persisted-document-loader": "1.0.1",
+    "graphql-persisted-document-loader": "2.0.0",
     "graphql-tag": "^2.10.1",
     "hammerjs": "2.0.8",
     "html-webpack-plugin": "4.0.0-beta.8",
@@ -259,12 +261,12 @@
     "script-ext-html-webpack-plugin": "2.1.4",
     "simple-progress-webpack-plugin": "1.1.2",
     "style-loader": "1.0.1",
-    "terser": "4.4.0",
+    "terser": "4.4.2",
     "twemoji-awesome": "1.0.6",
     "url-loader": "3.0.0",
     "velocity-animate": "1.5.2",
     "viz.js": "2.1.2",
-    "vue": "2.6.10",
+    "vue": "2.6.11",
     "vue-apollo": "3.0.2",
     "vue-chartjs": "3.5.0",
     "vue-clipboards": "1.3.0",
@@ -274,12 +276,12 @@
     "vue-moment": "4.0.0",
     "vue-router": "3.1.3",
     "vue-status-indicator": "1.2.1",
-    "vue-template-compiler": "2.6.10",
+    "vue-template-compiler": "2.6.11",
     "vue2-animate": "2.1.3",
     "vuedraggable": "2.23.2",
     "vuescroll": "4.14.4",
-    "vuetify": "2.1.12",
-    "vuetify-loader": "1.4.2",
+    "vuetify": "2.1.14",
+    "vuetify-loader": "1.4.3",
     "vuex": "3.1.2",
     "vuex-pathify": "1.4.0",
     "vuex-persistedstate": "2.7.0",
@@ -293,7 +295,7 @@
     "webpackbar": "4.0.0",
     "whatwg-fetch": "3.0.0",
     "write-file-webpack-plugin": "4.5.1",
-    "xterm": "4.2.0",
+    "xterm": "4.3.0",
     "zxcvbn": "4.4.2"
   },
   "browserslist": [
