--- a/package.json
+++ b/package.json
@@ -156,6 +156,8 @@
     "simple-git": "1.129.0",
     "solr-node": "1.2.1",
     "sqlite3": "4.1.1",
+    "ssh2": "0.8.7",
+    "ssh2-promise": "0.1.6",
     "striptags": "3.1.1",
     "subscriptions-transport-ws": "0.9.16",
     "tar-fs": "2.0.0",
